[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/gta/npcgtafps.gd" type="Script" id=1]
[ext_resource path="res://scenes/gta/zombiemesh.tscn" type="PackedScene" id=3]

[sub_resource type="CylinderShape" id=1]
height = 3.2193
radius = 0.707169

[sub_resource type="SphereShape" id=2]
radius = 60.0

[sub_resource type="SphereShape" id=3]
radius = 10.5612

[sub_resource type="SphereShape" id=4]
radius = 1.5242

[node name="npcgtafps" type="KinematicBody"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64769, 0 )
shape = SubResource( 1 )

[node name="Areatoofar" type="Area" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Areatoofar"]
shape = SubResource( 2 )

[node name="Areaclose" type="Area" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Areaclose"]
shape = SubResource( 3 )

[node name="Areacac" type="Area" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Areacac"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54151, 0 )
shape = SubResource( 4 )

[node name="mesh" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.2, 0, -1.74846e-08, 0, 0.2, 0, 1.74846e-08, 0, -0.2, 0, 0, 0 )

[connection signal="body_exited" from="Areatoofar" to="." method="_on_Areatoofar_body_exited"]
[connection signal="body_entered" from="Areaclose" to="." method="_on_Areaclose_body_entered"]
[connection signal="body_exited" from="Areaclose" to="." method="_on_Areaclose_body_exited"]
[connection signal="body_entered" from="Areacac" to="." method="_on_Areacac_body_entered"]
[connection signal="body_exited" from="Areacac" to="." method="_on_Areacac_body_exited"]

[editable path="mesh"]
